# basic-rag-v1

./: .coverage  .env.example  .gitignore  COMMANDS.md  README.md  add_tests2.py  ai_usage_log.md  chat.py  cli.py  ingest.py  main.py  pyproject.toml  result.md  test_results.md
app/: __init__.py  main.py
app/api/: __init__.py  router.py  routes.py
app/api/v1/: __init__.py  router.py  schemas.py
app/core/: __init__.py  config.py  constants.py  context.py  logger.py  prompt.py
app/db/: vector_store.py
app/ingestion/: __init__.py  chunker.py  loader.py
app/llm/: __init__.py  model_factory.py
app/rag/: __init__.py  pipeline.py
app/services/: entity_extractor.py  ingestion.py  memory.py  rag_service.py  reranker.py  user_profile.py
app/services/llm/: __init__.py  base.py  factory.py  gemini.py  groq.py  ollama.py
app/vectorstore/: __init__.py  qdrant_store.py
docs/: ADR-001-RAG-Architecture.md  PRD.md
examples/: agent_demo.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: ariaApi.js
frontend/src/components/: Icons.jsx
frontend/src/hooks/: useChat.js  useSessions.js
reading_documents/: ADR-001-RAG-Architecture.md  chunking_strategy.md  plan.md
scripts/: chat.py  cli.py  ingest.py
scripts/setup/: add_api_tests.py  add_tests.py
static/: chat.html  index.html
static/assets/: index-BEUbI5I6.js  index-Bc_HSNjy.css
tests/: __init__.py  parse_logs.py  test_api.py  test_ingestion.py  test_llm.py  test_rag.py  test_rag_service.py  test_vector_store.py
tests/integration/: test_api.py
tests/unit/: test_rag_service.py  test_vector_store.py
(+13 files in other folders)
