[project]
name = "aria-rag-chatbot"
version = "2.0.0"
description = "Production-grade HR RAG Chatbot using Qdrant Hybrid Search, Cross-Encoder Re-ranking, and multi-provider LLM support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.1",
    "fastembed>=0.8.0",
    "langchain>=1.3.13",
    "langchain-anthropic>=1.4.8",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "pdfplumber>=0.11.10",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
